fix tab text cropping issue

--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ fill: #434244;
 #rank-layout-tabs {
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  width: 100%;
 }
 
 .tab-legend {
@@ -496,7 +496,7 @@ fill: #434244;
 }
 
 .false-legend, .mixture-legend, .true-legend, .no-factual-legend {
-  width: 18px;
+  min-width: 18px;
   height: 18px;
   margin-right: 8px;
 }
